--- a/sample.html
+++ b/sample.html
@@ -15,5 +15,6 @@ alert( tm.toLocaleString() );
 </head>
   <body>
     <h1>timestamp</h1>
+    <p>this is not server error</p>
     </body>
 </html>
