--- a/sample.html
+++ b/sample.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<script type="text/javascript">
-function jsont(json)
-{
-var tm = new Date( json["st"] * 1000 );
-alert( tm.toLocaleString() );
-}
-</script>
-
-<script type="text/javascript" src="http://ntp-a1.nict.go.jp/cgi-bin/jsont">
-</script>
-
 </head>
   <body>
     <h1>timestamp</h1>
     <p>this is not server error</p>
+    <div id="container"></div>
+<div id="modal"></div>
     </body>
 </html>
