--- a/sample.html
+++ b/sample.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
+  <title>timestamp</title>
 </head>
   <body>
     <h1>timestamp</h1>
     <p>this is not server error</p>
-    <div id="container"></div>
-<div id="modal"></div>
+    <input type="button"value="JSONファイルを取得する" onclick="getJSON()">
     </body>
 </html>
