--- a/sample.html
+++ b/sample.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta charset="UTF-8">
   <title>timestamp</title>
+ <script>   
+function getJSON() {
+  var req = new XMLHttpRequest();		  // XMLHttpRequest オブジェクトを生成する
+  req.onreadystatechange = function() {		  // XMLHttpRequest オブジェクトの状態が変化した際に呼び出されるイベントハンドラ
+    if(req.readyState == 4 && req.status == 200){ // サーバーからのレスポンスが完了し、かつ、通信が正常に終了した場合
+      alert(req.responseText);		          // 取得した JSON ファイルの中身を表示
+    }
+  };
+  req.open("GET", "https://ntp-a1.nict.go.jp/cgi-bin/json", false); // HTTPメソッドとアクセスするサーバーの　URL　を指定
+  req.send(null);					    // 実際にサーバーへリクエストを送信
+}
+     </script>
 </head>
   <body>
     <h1>timestamp</h1>
