--- a/sample.html
+++ b/sample.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
   <title>timestamp</title>
- <script>   
+ <script type="text/javascript">   
 function getJSON() {
   var req = new XMLHttpRequest();		  // XMLHttpRequest オブジェクトを生成する
   req.onreadystatechange = function() {		  // XMLHttpRequest オブジェクトの状態が変化した際に呼び出されるイベントハンドラ
