--- a/sample.html
+++ b/sample.html
@@ -4,15 +4,21 @@
 <meta charset="UTF-8">
   <title>timestamp</title>
  <script type="text/javascript">   
-function getJSON() {
-  var req = new XMLHttpRequest();		  // XMLHttpRequest オブジェクトを生成する
-  req.onreadystatechange = function() {		  // XMLHttpRequest オブジェクトの状態が変化した際に呼び出されるイベントハンドラ
-    if(req.readyState == 4 && req.status == 200){ // サーバーからのレスポンスが完了し、かつ、通信が正常に終了した場合
-      alert(req.responseText);		          // 取得した JSON ファイルの中身を表示
+window.onload = function() {
+    var url = "https://worldtimeapi.org/api/timezone/Asia/Tokyo";
+    let r = new XMLHttpRequest();
+    r.open('GET', url);
+    r.responseType = 'json';
+    r.send();
+
+    r.onreadystatechange = () => {
+        if (r.readyState == 4 && r.status == 200) {
+            const jsonStr = JSON.stringify(r.response);
+            const obj = JSON.parse(jsonStr);
+            var time = document.getElementById("time");
+            time.innerHTML = obj["datetime"];
+        }
     }
-  };
-  req.open("GET", "http://worldtimeapi.org/api/timezone/Asia/Tokyo", false); // HTTPメソッドとアクセスするサーバーの　URL　を指定
-  req.send(null);					    // 実際にサーバーへリクエストを送信
 }
      </script>
 </head>
