--- a/sample.html
+++ b/sample.html
@@ -22,9 +22,10 @@ window.onload = function() {
 }
      </script>
 </head>
-  <body>
-    <h1>timestamp</h1>
-    <p>this is not server error</p>
+  <body> 
+    <h1>time</h1>
+
+                <h4 id = "time" class="heading_quiz">test</h4>
     <input type="button"value="JSONファイルを取得する" onclick="getJSON()">
     </body>
 </html>
